Pagina web Ivan

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,3 +5,19 @@
 @import "html-tags";
 
 @import "responsive-utils";
+
+@import "components/header";
+
+@import "components/maquinaria-lista";
+
+@import "components/container";
+
+@import "components/formulario";
+
+@import "components/imagenesinicio";
+
+@import "components/footer";
+
+@import "components/portada";
+
+@import "components/ranking";
