--- a/src/scss/_html-tags.scss
+++ b/src/scss/_html-tags.scss
@@ -1,11 +1,72 @@
 body {
-    background: lavender;
-    text-align: center;
-    font-size: 30px;
-    font-family:Arial, Helvetica, sans-serif;
-    color: green;
-    padding-top: 60px;
+//background: $color-blanco;
+//background-image: url(img/fondo.png);
+background-attachment: fixed;
+background-color:  fade-out($color-rojo, 0.8);
+padding-top:170px; 
+font-family: $main-font-family;
+
 }
 a {
     text-decoration: none;
+    color: $color-blanco;
+}
+a:hover{
+    color:black;
+    transition: 1.5s;
+    padding: 40px 10px;
+    background:fade-out($color-blanco,0.30);
+
+}
+
+form {
+    padding: 10px;
+}
+
+label, input, button {
+    display: block;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+label {
+    font-size: $font-size-h5;
+    //font-weight: bold;
+  //  text-transform: uppercase;
+}
+
+input {
+    margin: 5px 0 15px 0;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid $form-input-border-color;
+    font-size: $font-size-base;
+    &:focus {
+        outline-color: $form-input-outline-color;
+    }
+}
+
+button {
+    @extend input;
+    background-color:  fade-out($color-rojo, 0.25);
+    color:$color-blanco;
+    font-weight: bold;
+    transition: all 0.25s;
+    &:active {
+        background: lighten($form-button-background-color, 0%);
+    }
+}
+p {
+   
+    
+    font-size: 20px;
+    padding-bottom: 10px;
+}
+.neg{
+    font-weight: bold;
+    
+
+}
+.cur{
+    font-style: italic;
 }
