--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,14 +1,34 @@
 // Font families
 
+$main-font-family: 'Fenix', serif;
+$title-font-family: 'Quicksand', sans-serif;
+$body-font-family: $main-font-family;
 
 // Font sizes
 
+$font-size-base: 15px;
+$font-size-small: $font-size-base - 3px;
+$font-size-large: $font-size-base + 5px;
+$font-size-h1: $font-size-base + 15px;
+$font-size-h2: $font-size-base + 12px;
+$font-size-h3: $font-size-base + 9px;
+$font-size-h4: $font-size-base + 6px;
+$font-size-h5: $font-size-base + 3px;
+$font-size-h6: $font-size-base;
 
 // Base colors
+
+$color-rojo: #db4720;
+$color-azul:#0e38b1;
+$color-blanco:#ffffff;
+$color-negro: #000000;
+
 
 
 // Main components colors
 
+$main-text-color: $color-blanco;
+$links-color: $color-rojo;
 
 // Responsive
 // 667 iphone landscape. 768 ipad portrait
@@ -18,4 +38,11 @@ $tablet-portrait-width: $mobile-landscape-width + 1;
 $tablet-landscape-width: 1024px;
 
 // Forms variables
+
+$form-input-border-color: $color-rojo;
+$form-input-outline-color: $color-azul;
+$form-button-background-color: $color-rojo;
+$form-button-font-color: $color-blanco;
+$form-error-background-color: $color-azul;
+$form-error-font-color: $color-rojo;
 
